--- a/_template/tpays.go.kr/include/css/user.css
+++ b/_template/tpays.go.kr/include/css/user.css
@@ -3,3 +3,15 @@
 @media (min-width: 768px)
 .navbar-login { float: right; }
 .navbar-login li { min-width:80px;text-align:center;padding-left:10px;padding-right:10px; }
+
+@media (min-width: 768px)
+.navbar-login > li > a {
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+
+.navbar-nav > li > a {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    line-height: 20px;
+}
