--- a/_template/tpays.go.kr/include/css/user.css
+++ b/_template/tpays.go.kr/include/css/user.css
@@ -1,10 +1,6 @@
 .navbar { margin-bottom:0px; }
-
-@media (min-width: 768px)
-.navbar-login { float: right; }
-.navbar-login li { min-width:80px;text-align:center;padding-left:10px;padding-right:10px; }
-
-@media (min-width: 768px)
+.navbar-login {float:left;width:auto;display:inline-block  }
+.navbar-login li { min-width:80px;text-align:center;}
 .navbar-login > li > a {
     padding-top: 15px;
     padding-bottom: 15px;
