--- a/_template/tpays.go.kr/include/css/user.css
+++ b/_template/tpays.go.kr/include/css/user.css
@@ -1,9 +1,10 @@
+.navbar-brand { height:40px; }
 .navbar { margin-bottom:0px; }
 .navbar-login {float:right;width:auto; }
 .navbar-login li { min-width:80px;text-align:center;display: inline-block;}
 .navbar-login > li > a {
-    padding-top: 15px;
-    padding-bottom: 15px;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
 .navbar-nav > li > a {
