--- a/_template/tpays.go.kr/include/css/user.css
+++ b/_template/tpays.go.kr/include/css/user.css
@@ -3,3 +3,7 @@
 .container {
     width: 90%;
 }
+.navbar-inverse {background-color: #FFFFFF;border-color: #FFFFFF;}
+
+
+.main_visual {background-color: #000000;}
