--- a/_template/tpays.go.kr/include/css/user.css
+++ b/_template/tpays.go.kr/include/css/user.css
@@ -1,10 +1,11 @@
 
 .navbar { margin-bottom:0px; background:url('../../include/img/header_border.png') repeat-x 0 bottom}
-.navbar-inverse {border-color: #FFFFFF;opacity: 1;background-color:rgba(0, 0, 0, 0);}
+.navbar-inverse {border-color: #FFFFFF;opacity: 1;background-color:rgba(0, 0, 0, 0);border:0px;}
 .container {width: 96%;height:auto; }
 .container .logo {padding-top:25px;padding-bottom:25px;}
 .navbar:hover { background-color:#FFFFFF; }
 .navbar:hover .logo img { content: url(../../include/img/logo/logo_on.png); }
+
 /*** main visual ***/
 .main_visual {background-color: #000000;min-height:650px;width:100%;}
 .main_visual .item { position: absolute;z-index:9;width:100%;}
