--- a/_template/tpays.go.kr/include/css/user.css
+++ b/_template/tpays.go.kr/include/css/user.css
@@ -2,7 +2,11 @@
 .navbar { margin-bottom:0px; background:url('../../include/img/header_border.png') repeat-x 0 bottom}
 .navbar-inverse {border-color: #FFFFFF;opacity: 1;background-color:rgba(0, 0, 0, 0);border:0px;}
 .container {width: 96%;height:auto; }
+
 .container .logo {padding-top:25px;padding-bottom:25px;}
+
+.mobile_menu {float:right;}
+
 .navbar:hover { background-color:#FFFFFF; }
 .navbar:hover .logo img { content: url(../../include/img/logo/logo_on.png); }
 
