--- a/_template/tpays.go.kr/include/css/user.css
+++ b/_template/tpays.go.kr/include/css/user.css
@@ -71,7 +71,11 @@ body{background-color:#fff;}
 .container .memu li {min-width:120px;text-align:center;display:inline-block;}
 .container .memu li a { font-size:18px;color:#FFFFFF;font-weight:400;text-decoration: none;padding-left:10px;padding-right:10px; }
 .container .memu li .submenu {float:left;position: absolute;width:auto;background-color:#FFFFFF;}
-.container .memu li .submenu li {  }
+.container .memu li .submenu ul { padding-left:10px;}
+.container .memu li .submenu li { display:block }
+.container .memu li .submenu li a { font-size:13px;color:#444;  }
+
+
 .navbar:hover { background-color:#FFFFFF; }
 .navbar:hover .logo img { content: url(../../include/img/logo/logo_on.png); }
 .navbar:hover .container .mobile_menu img { content: url(../../include/img/btn_allmenu_on.png); }
