--- a/_template/tpays.go.kr/include/css/user.css
+++ b/_template/tpays.go.kr/include/css/user.css
@@ -72,7 +72,7 @@ body{background-color:#fff;}
 .container .memu li a { font-size:18px;color:#FFFFFF;font-weight:400;text-decoration: none;padding-left:10px;padding-right:10px; }
 .container .memu li .submenu {float:left;position: absolute;width:auto;background-color:#FFFFFF;}
 .container .memu li .submenu ul { padding-left:10px;}
-.container .memu li .submenu li { display:block }
+.container .memu li .submenu li { display:block;line-height:25px;text-align:left; }
 .container .memu li .submenu li a { font-size:13px;color:#444;  }
 
 
