--- a/_template/tpays.go.kr/include/css/user.css
+++ b/_template/tpays.go.kr/include/css/user.css
@@ -71,9 +71,9 @@ body{background-color:#fff;}
 .container .memu li {min-width:120px;text-align:center;display:inline-block;}
 .container .memu li a { font-size:18px;color:#FFFFFF;font-weight:400;text-decoration: none;padding-left:10px;padding-right:10px; }
 .container .memu li .submenu {float:left;position: absolute;width:auto;background-color:#FFFFFF;}
-.container .memu li .submenu ul { padding-left:10px;}
-.container .memu li .submenu li { display:block;line-height:25px;text-align:left; }
-.container .memu li .submenu li a { font-size:13px;color:#444;  }
+.container .memu li .submenu ul { padding-left:10px;margin-top:10px;margin-bottom:20px;border-top:1px #444 solid;}
+.container .memu li .submenu li { display:block;line-height:25px;text-align:left;margin-top:5px;margin-bottom:5px; }
+.container .memu li .submenu li a { font-size:15px;color:#444;  }
 
 
 .navbar:hover { background-color:#FFFFFF; }
