--- a/_template/tpays.go.kr/include/css/user.css
+++ b/_template/tpays.go.kr/include/css/user.css
@@ -71,7 +71,7 @@ body{background-color:#fff;}
 .container .memu li {min-width:120px;text-align:center;display:inline-block;}
 /*.container .memu li:hover .submenu {display:block;}*/
 .container .memu li a { font-size:16px;color:#FFFFFF;font-weight:400;text-decoration: none;padding-left:10px;padding-right:10px; }
-.container .memu li .submenu {float:left;position: absolute;width:auto;background-color:#FFFFFF;border-bottom-left-radius:15px;border-bottom-right-radius:15px;display:none;}
+.container .memu li .submenu {float:left;position: absolute;width:auto;background-color:#FFFFFF;border-bottom-left-radius:15px;border-bottom-right-radius:15px;}
 .container .memu li .submenu ul { padding-left:10px;margin-top:18px;padding-top:15px;padding-bottom:20px;border-top:1px #bb005e solid;}
 .container .memu li .submenu li { display:block;line-height:25px;text-align:left;margin-top:5px;margin-bottom:5px; }
 .container .memu li .submenu li a { font-size:14px;color:#444;  }
