--- a/_template/tpays.go.kr/include/css/user.css
+++ b/_template/tpays.go.kr/include/css/user.css
@@ -62,7 +62,7 @@ body{background-color:#fff;}
 }
 
 .navbar { margin-bottom:0px; background:url('../../include/img/header_border.png') repeat-x 0 bottom}
-.navbar-inverse {border-color: #FFFFFF;opacity: 1;background-color:rgba(0, 0, 0, 0);border:0px;}
+.navbar-inverse {border-color: #FFFFFF;}
 .container {width: 96%;height:auto; }
 
 .container .logo {padding-top:25px;padding-bottom:25px;float: left;width:auto;}
