--- a/_template/tpays.go.kr/include/css/user.css
+++ b/_template/tpays.go.kr/include/css/user.css
@@ -61,8 +61,8 @@ body{background-color:#fff;}
        url(fonts/NanumBarunGothicBold.ttf) format('truetype');
 }
 
-.navbar { margin-bottom:0px; background:url('../../include/img/header_border.png') repeat-x 0 bottom}
-.navbar-inverse {border-color: #FFFFFF;}
+.navbar { margin-bottom:0px; } /* background:url('../../include/img/header_border.png') repeat-x 0 bottom */
+.navbar-inverse {border-color: #FFFFFF;border: 0px;}
 .container {width: 96%;height:auto; }
 
 .container .logo {padding-top:25px;padding-bottom:25px;float: left;width:auto;}
