--- a/_template/tpays.go.kr/include/css/user.css
+++ b/_template/tpays.go.kr/include/css/user.css
@@ -70,13 +70,13 @@ body{background-color:#fff;}
 .container .memu {list-style:none;position: absolute;left:50%;line-height:40px;margin-bottom:20px;margin-top:20px;margin-left:-370px;font-family: 'NanumBarunGothic'}
 .container .memu li {min-width:120px;text-align:center;display:inline-block;}
 .container .memu li a { font-size:16px;color:#FFFFFF;font-weight:400;text-decoration: none;padding-left:10px;padding-right:10px; }
-.container .memu li .submenu {float:left;position: absolute;width:auto;height:0px;opacity:0;overflow:hidden}
+.container .memu li .submenu {float:left;position: absolute;width:auto;height:0px;opacity:0;overflow:hidden;z-index:10}
 .container .memu li .submenu ul { padding-left:10px;margin-top:19px;padding-top:15px;padding-bottom:20px;}
 .container .memu li .submenu li { display:block;line-height:25px;text-align:left;margin-top:5px;margin-bottom:5px; }
 .container .memu li .submenu li a { font-size:14px;color:#444;  }
 .container .memu li .submenu li a:hover { color:#bb005e; }
 
-.navbar .submenuBg {position: absolute;top: 81px; left: 0; width: 100%; background: #fff url(/images/common/header_border.png) repeat-x 0 top;index:1 }
+.navbar .submenuBg {position: absolute;top: 81px; left: 0; width: 100%; background: #fff url(/images/common/header_border.png) repeat-x 0 top;z-index:1 }
 
 /*.navbar:hover { background-color:#FFFFFF; }*/
 .navbar:hover .logo img { content: url(../../include/img/logo/logo_on.png); }
